feat: lock DLS to Muted theme

--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
+    "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
   "dependencies": {
+    "@heroui/react": "3.0.0-beta.3",
+    "@heroui/styles": "3.0.0-beta.3",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "motion": "^12.23.26",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
