--- a/biome.json
+++ b/biome.json
@@ -27,6 +27,12 @@
       "react": "recommended"
     }
   },
+  "css": {
+    "parser": {
+      "cssModules": true,
+      "tailwindDirectives": true
+    }
+  },
   "assist": {
     "actions": {
       "source": {
